RESOLVED FIXED133025
PlatformCALayerRemoteCustom properties aren't initialized to match the PlatformLayer
https://bugs.webkit.org/show_bug.cgi?id=133025
Summary PlatformCALayerRemoteCustom properties aren't initialized to match the Platfo...
Jeremy Jones
Reported 2014-05-16 21:52:56 PDT
PlatformCALayerRemoteCustom properties aren't initialized to match the PlatformLayer
Attachments
Patch (1.65 KB, patch)
2014-05-16 21:57 PDT, Jeremy Jones
no flags
Patch (1.87 KB, patch)
2014-05-19 14:16 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2014-05-16 21:55:22 PDT
radar://16796474 After exiting fullscreen HTMLMediaElement's PlatformLayer may have a non-zero Position. The renderer creates PlatoformCALayerRemoteCustom for that layer with a default position of (0,0,0). The renderer then sets the position to (0,0,0), which is ignore and the PlatformLayer's position is never updated.
Jeremy Jones
Comment 2 2014-05-16 21:57:55 PDT
Jeremy Jones
Comment 3 2014-05-19 14:16:27 PDT
Tim Horton
Comment 4 2014-05-19 14:25:12 PDT
Hmm, we should probably do all of them.
Jeremy Jones
Comment 5 2014-05-19 16:42:13 PDT
(In reply to comment #4) > Hmm, we should probably do all of them. I've filed: https://bugs.webkit.org/show_bug.cgi?id=133093 to cover initializing the rest of the properties.
WebKit Commit Bot
Comment 6 2014-05-19 17:19:11 PDT
Comment on attachment 231721 [details] Patch Clearing flags on attachment: 231721 Committed r169086: <http://trac.webkit.org/changeset/169086>
WebKit Commit Bot
Comment 7 2014-05-19 17:19:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.