PlatformCALayerRemoteCustom properties aren't initialized to match the PlatformLayer https://bugs.webkit.org/show_bug.cgi?id=133025

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-05-19
Reviewed by Simon Fraser.

* WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.mm:
(WebKit::PlatformCALayerRemoteCustom::PlatformCALayerRemoteCustom):
Initialize PlatformCALayerRemote properties from the PlatformLayer.

Canonical link: https://commits.webkit.org/151118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169086 268f45cc-cd09-0410-ab3c-d52691b4dbfc